feat: lowercase auth error enums and expand set
